jkind/src/jkind/lustre/parsing/LustreParser.java
// Generated from Lustre.g4 by ANTLR 4.2
package jkind.lustre.parsing;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LustreParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__52=1, T__51=2, T__50=3, T__49=4, T__48=5, T__47=6, T__46=7, T__45=8, 
		T__44=9, T__43=10, T__42=11, T__41=12, T__40=13, T__39=14, T__38=15, T__37=16, 
		T__36=17, T__35=18, T__34=19, T__33=20, T__32=21, T__31=22, T__30=23, 
		T__29=24, T__28=25, T__27=26, T__26=27, T__25=28, T__24=29, T__23=30, 
		T__22=31, T__21=32, T__20=33, T__19=34, T__18=35, T__17=36, T__16=37, 
		T__15=38, T__14=39, T__13=40, T__12=41, T__11=42, T__10=43, T__9=44, T__8=45, 
		T__7=46, T__6=47, T__5=48, T__4=49, T__3=50, T__2=51, T__1=52, T__0=53, 
		REAL=54, BOOL=55, INT=56, ID=57, WS=58, SL_COMMENT=59, ML_COMMENT=60, 
		ERROR=61;
	public static final String[] tokenNames = {
		"<INVALID>", "'or'", "'*'", "'node'", "'['", "'<'", "'<='", "'}'", "'->'", 
		"'xor'", "')'", "'bool'", "'--%PROPERTY'", "'='", "'div'", "'const'", 
		"'mod'", "'returns'", "'--%MAIN'", "'assert'", "'enum'", "'real'", "']'", 
		"'--%EVENTUALLY'", "'subrange'", "','", "'of'", "'-'", "'not'", "'('", 
		"':'", "'if'", "'floor'", "'int'", "'var'", "'{'", "'and'", "'condact'", 
		"'let'", "'tel'", "'else'", "'struct'", "'pre'", "'.'", "'=>'", "'+'", 
		"'<>'", "';'", "'>'", "'type'", "':='", "'then'", "'/'", "'>='", "REAL", 
		"BOOL", "INT", "ID", "WS", "SL_COMMENT", "ML_COMMENT", "ERROR"
	};
	public static final int
		RULE_program = 0, RULE_typedef = 1, RULE_constant = 2, RULE_node = 3, 
		RULE_varDeclList = 4, RULE_varDeclGroup = 5, RULE_topLevelType = 6, RULE_type = 7, 
		RULE_bound = 8, RULE_property = 9, RULE_eventually = 10, RULE_main = 11, 
		RULE_assertion = 12, RULE_equation = 13, RULE_lhs = 14, RULE_expr = 15;
	public static final String[] ruleNames = {
		"program", "typedef", "constant", "node", "varDeclList", "varDeclGroup", 
		"topLevelType", "type", "bound", "property", "eventually", "main", "assertion", 
		"equation", "lhs", "expr"
	};

	@Override
	public String getGrammarFileName() { return "Lustre.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LustreParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ConstantContext constant(int i) {
			return getRuleContext(ConstantContext.class,i);
		}
		public TerminalNode EOF() { return getToken(LustreParser.EOF, 0); }
		public TypedefContext typedef(int i) {
			return getRuleContext(TypedefContext.class,i);
		}
		public NodeContext node(int i) {
			return getRuleContext(NodeContext.class,i);
		}
		public List<NodeContext> node() {
			return getRuleContexts(NodeContext.class);
		}
		public List<TypedefContext> typedef() {
			return getRuleContexts(TypedefContext.class);
		}
		public List<ConstantContext> constant() {
			return getRuleContexts(ConstantContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 3) | (1L << 15) | (1L << 49))) != 0)) {
				{
				setState(35);
				switch (_input.LA(1)) {
				case 49:
					{
					setState(32); typedef();
					}
					break;
				case 15:
					{
					setState(33); constant();
					}
					break;
				case 3:
					{
					setState(34); node();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(40); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedefContext extends ParserRuleContext {
		public TopLevelTypeContext topLevelType() {
			return getRuleContext(TopLevelTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(LustreParser.ID, 0); }
		public TypedefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitTypedef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypedefContext typedef() throws RecognitionException {
		TypedefContext _localctx = new TypedefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_typedef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42); match(49);
			setState(43); match(ID);
			setState(44); match(13);
			setState(45); topLevelType();
			setState(46); match(47);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ID() { return getToken(LustreParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitConstant(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_constant);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48); match(15);
			setState(49); match(ID);
			setState(52);
			_la = _input.LA(1);
			if (_la==30) {
				{
				setState(50); match(30);
				setState(51); type(0);
				}
			}

			setState(54); match(13);
			setState(55); expr(0);
			setState(56); match(47);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeContext extends ParserRuleContext {
		public VarDeclListContext input;
		public VarDeclListContext output;
		public VarDeclListContext local;
		public List<AssertionContext> assertion() {
			return getRuleContexts(AssertionContext.class);
		}
		public TerminalNode ID() { return getToken(LustreParser.ID, 0); }
		public List<EventuallyContext> eventually() {
			return getRuleContexts(EventuallyContext.class);
		}
		public List<VarDeclListContext> varDeclList() {
			return getRuleContexts(VarDeclListContext.class);
		}
		public List<PropertyContext> property() {
			return getRuleContexts(PropertyContext.class);
		}
		public EventuallyContext eventually(int i) {
			return getRuleContext(EventuallyContext.class,i);
		}
		public VarDeclListContext varDeclList(int i) {
			return getRuleContext(VarDeclListContext.class,i);
		}
		public MainContext main(int i) {
			return getRuleContext(MainContext.class,i);
		}
		public List<MainContext> main() {
			return getRuleContexts(MainContext.class);
		}
		public PropertyContext property(int i) {
			return getRuleContext(PropertyContext.class,i);
		}
		public AssertionContext assertion(int i) {
			return getRuleContext(AssertionContext.class,i);
		}
		public List<EquationContext> equation() {
			return getRuleContexts(EquationContext.class);
		}
		public EquationContext equation(int i) {
			return getRuleContext(EquationContext.class,i);
		}
		public NodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NodeContext node() throws RecognitionException {
		NodeContext _localctx = new NodeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_node);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58); match(3);
			setState(59); match(ID);
			setState(60); match(29);
			setState(62);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(61); ((NodeContext)_localctx).input = varDeclList();
				}
			}

			setState(64); match(10);
			setState(65); match(17);
			setState(66); match(29);
			setState(68);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(67); ((NodeContext)_localctx).output = varDeclList();
				}
			}

			setState(70); match(10);
			setState(71); match(47);
			setState(76);
			_la = _input.LA(1);
			if (_la==34) {
				{
				setState(72); match(34);
				setState(73); ((NodeContext)_localctx).local = varDeclList();
				setState(74); match(47);
				}
			}

			setState(78); match(38);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 12) | (1L << 18) | (1L << 19) | (1L << 23) | (1L << 29) | (1L << ID))) != 0)) {
				{
				setState(84);
				switch (_input.LA(1)) {
				case 29:
				case ID:
					{
					setState(79); equation();
					}
					break;
				case 12:
					{
					setState(80); property();
					}
					break;
				case 23:
					{
					setState(81); eventually();
					}
					break;
				case 19:
					{
					setState(82); assertion();
					}
					break;
				case 18:
					{
					setState(83); main();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89); match(39);
			setState(91);
			_la = _input.LA(1);
			if (_la==47) {
				{
				setState(90); match(47);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclListContext extends ParserRuleContext {
		public VarDeclGroupContext varDeclGroup(int i) {
			return getRuleContext(VarDeclGroupContext.class,i);
		}
		public List<VarDeclGroupContext> varDeclGroup() {
			return getRuleContexts(VarDeclGroupContext.class);
		}
		public VarDeclListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitVarDeclList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclListContext varDeclList() throws RecognitionException {
		VarDeclListContext _localctx = new VarDeclListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varDeclList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(93); varDeclGroup();
			setState(98);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(94); match(47);
					setState(95); varDeclGroup();
					}
					} 
				}
				setState(100);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclGroupContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(LustreParser.ID); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID(int i) {
			return getToken(LustreParser.ID, i);
		}
		public VarDeclGroupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclGroup; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitVarDeclGroup(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclGroupContext varDeclGroup() throws RecognitionException {
		VarDeclGroupContext _localctx = new VarDeclGroupContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varDeclGroup);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101); match(ID);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==25) {
				{
				{
				setState(102); match(25);
				setState(103); match(ID);
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109); match(30);
			setState(110); type(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopLevelTypeContext extends ParserRuleContext {
		public TopLevelTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelType; }
	 
		public TopLevelTypeContext() { }
		public void copyFrom(TopLevelTypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PlainTypeContext extends TopLevelTypeContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public PlainTypeContext(TopLevelTypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitPlainType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EnumTypeContext extends TopLevelTypeContext {
		public List<TerminalNode> ID() { return getTokens(LustreParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(LustreParser.ID, i);
		}
		public EnumTypeContext(TopLevelTypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitEnumType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RecordTypeContext extends TopLevelTypeContext {
		public List<TerminalNode> ID() { return getTokens(LustreParser.ID); }
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TerminalNode ID(int i) {
			return getToken(LustreParser.ID, i);
		}
		public RecordTypeContext(TopLevelTypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitRecordType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopLevelTypeContext topLevelType() throws RecognitionException {
		TopLevelTypeContext _localctx = new TopLevelTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_topLevelType);
		int _la;
		try {
			setState(141);
			switch (_input.LA(1)) {
			case 11:
			case 21:
			case 24:
			case 33:
			case ID:
				_localctx = new PlainTypeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(112); type(0);
				}
				break;
			case 41:
				_localctx = new RecordTypeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(113); match(41);
				setState(114); match(35);
				{
				setState(115); match(ID);
				setState(116); match(30);
				setState(117); type(0);
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==47) {
					{
					{
					setState(119); match(47);
					setState(120); match(ID);
					setState(121); match(30);
					setState(122); type(0);
					}
					}
					setState(127);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(128); match(7);
				}
				break;
			case 20:
				_localctx = new EnumTypeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(130); match(20);
				setState(131); match(35);
				setState(132); match(ID);
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==25) {
					{
					{
					setState(133); match(25);
					setState(134); match(ID);
					}
					}
					setState(139);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(140); match(7);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	 
		public TypeContext() { }
		public void copyFrom(TypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SubrangeTypeContext extends TypeContext {
		public BoundContext bound(int i) {
			return getRuleContext(BoundContext.class,i);
		}
		public List<BoundContext> bound() {
			return getRuleContexts(BoundContext.class);
		}
		public SubrangeTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitSubrangeType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BoolTypeContext extends TypeContext {
		public BoolTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitBoolType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ArrayTypeContext extends TypeContext {
		public TerminalNode INT() { return getToken(LustreParser.INT, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ArrayTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitArrayType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IntTypeContext extends TypeContext {
		public IntTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitIntType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RealTypeContext extends TypeContext {
		public RealTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitRealType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UserTypeContext extends TypeContext {
		public TerminalNode ID() { return getToken(LustreParser.ID, 0); }
		public UserTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitUserType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		return type(0);
	}

	private TypeContext type(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TypeContext _localctx = new TypeContext(_ctx, _parentState);
		TypeContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_type, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			switch (_input.LA(1)) {
			case 33:
				{
				_localctx = new IntTypeContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(144); match(33);
				}
				break;
			case 24:
				{
				_localctx = new SubrangeTypeContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(145); match(24);
				setState(146); match(4);
				setState(147); bound();
				setState(148); match(25);
				setState(149); bound();
				setState(150); match(22);
				setState(151); match(26);
				setState(152); match(33);
				}
				break;
			case 11:
				{
				_localctx = new BoolTypeContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(154); match(11);
				}
				break;
			case 21:
				{
				_localctx = new RealTypeContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(155); match(21);
				}
				break;
			case ID:
				{
				_localctx = new UserTypeContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(156); match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(165);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ArrayTypeContext(new TypeContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_type);
					setState(159);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(160); match(4);
					setState(161); match(INT);
					setState(162); match(22);
					}
					} 
				}
				setState(167);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class BoundContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(LustreParser.INT, 0); }
		public BoundContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bound; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitBound(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BoundContext bound() throws RecognitionException {
		BoundContext _localctx = new BoundContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_bound);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			_la = _input.LA(1);
			if (_la==27) {
				{
				setState(168); match(27);
				}
			}

			setState(171); match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertyContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(LustreParser.ID, 0); }
		public PropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_property; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitProperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertyContext property() throws RecognitionException {
		PropertyContext _localctx = new PropertyContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_property);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173); match(12);
			setState(174); match(ID);
			setState(175); match(47);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventuallyContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(LustreParser.ID, 0); }
		public EventuallyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eventually; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitEventually(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventuallyContext eventually() throws RecognitionException {
		EventuallyContext _localctx = new EventuallyContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_eventually);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177); match(23);
			setState(178); match(ID);
			setState(179); match(47);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181); match(18);
			setState(183);
			_la = _input.LA(1);
			if (_la==47) {
				{
				setState(182); match(47);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssertionContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssertionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assertion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitAssertion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssertionContext assertion() throws RecognitionException {
		AssertionContext _localctx = new AssertionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_assertion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185); match(19);
			setState(186); expr(0);
			setState(187); match(47);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EquationContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
